--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ html, body {
 
 .Project {
   width: 45rem;
-  height: 30rem;
+  height: fit-content;
   outline: solid;
   border-radius: 2rem;
   text-align: center;
@@ -25,6 +25,7 @@ html, body {
   overflow: hidden;
   outline-color: #222222;
   outline-width: 5px;
+  max-height: 70vh;
 
   display: flex;
   flex-direction: row;
@@ -35,6 +36,7 @@ html, body {
 }
 
 .Project .ContentBox {
+  height: fit-content;
   width: 50%;
 }
 
@@ -182,7 +184,8 @@ li {
     border-radius: 1rem;
     font-size: .27rem;
     width: 50vw;
-    height: 20vh;
+    height: fit-content;
+    max-height: 50vh;
   }
 
   .Project h2 {
